fix overflow so that slider frames off-canvas don't get in the way of outside elements

--- a/client/sass/app/common/slider.scss
+++ b/client/sass/app/common/slider.scss
@@ -129,6 +129,7 @@ $slider-btn-height: 35px;
     height: 100%; 
     width: 100%;
     list-style-type: none;
+    overflow: hidden;
   }
 
   .sequence-canvas > li {
